voxalfa-core/src/tests/snapshots/voxalfa_validator__tests__utils__invalid_type_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] key={Z}

---

=== DIAGNOSTICS ===
error[E008]: invalid key
 --> invalid_type_error.vfa:2:1
  |
 2 | [$] key={Z}
   | ^^^^^^^^^^^ error

error[E026]: 'voices' prameter has not been defined
 --> invalid_type_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error
