voxalfa-core/src/tests/snapshots/voxalfa_validator__tests__utils__invalid_voice_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={A}
---

[E] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E012]: invalid voice 'E'
 --> invalid_voice_error.vfa:5:1
  |
 5 | [E] |d :r !m :f ||
   | ^^^^^^^^^^^^^^^^^^ error
