voxalfa-core/src/tests/snapshots/voxalfa_validator__tests__utils__non_top_level_override_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S,T}
---

[S] |d :r !m :f ||

++

[$] key={C}

[T] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E028]: parameter override should be done at the top level
 --> non_top_level_override_error.vfa:8:1
  |
 3 | ---
   | --- set parameter override here
 8 | 
   | ^ error
