voxalfa-core/src/tests/snapshots/voxalfa_validator__tests__utils__pulse_accent_mismatch_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S}
---

[S] |d :r !m |f ||

=== DIAGNOSTICS ===
error[E022]: expected ':', got '|'
 --> pulse_accent_mismatch_error.vfa:5:1
  |
 5 | [S] |d :r !m |f ||
   | ^^^^^^^^^^^^^^^^^^ error
